--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
+    "react-scramble-text": "^1.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
