--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "chroma-js": "^2.4.2",
     "react": "^18.1.0",
+    "react-cypher-text-loop": "^1.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
-    "react-scramble-text": "^1.0.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
