--- a/src/assets/database/projects.json
+++ b/src/assets/database/projects.json
@@ -6,6 +6,7 @@
              "Working on using Terraform and Ansible to help with the provisioning of resources to help create and manage the VMs.",
              "Configure the application on the on-prem servers for it to be accessible from the internet."
             ],
+    "link": "https://github.com/jonjon98/fyp-speechlab-asr-deploy",
     "tech": [""]
   },
 
@@ -15,6 +16,7 @@
     "desc": ["Worked on an embedded system driven RC car in a group of 8 for 11 weeks to compete in various navigation exercises amongst other groups.",
              "Developed accurate movement and sensor drivers for the RC car to achieve 3rd and 8th placing on the “Image Recognition” and the “Fastest Path” tasks respectively."
             ],
+    "link": "https://github.com/wangwaynesg/AY2122-SEM1-MDP-GROUP10",
     "tech": [""]
   },
 
@@ -24,6 +26,7 @@
     "desc": ["Developed a simple Python user interface to allow the user upload a .csv file of the packets in the network traffic of a WEP server and use it to crack the password of the WEP router.",
              "Implemented the FMS attack which the weakness of the RC4 in order to achieve accurate cracking of the WEP standard."
             ],
+    "link": "https://github.com/jonjon98/WEP_RC4_Cracking",
     "tech": [""]
   }
 ]
