--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "chroma-js": "^2.4.2",
     "react": "^18.1.0",
-    "react-cypher-text-loop": "^1.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.54.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start --reset-cache",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
